2247 [AVS Script Creator] hide "Aspect Ratio Error" when doing an anamorphic encoding
                          fixed handling of the "Aspect Ratio Error" if dealing with an anamorphic input file
2246 [AVS Script Creator] enhanced readability of the "red parts"
                          the "Aspect Ratio Error" only turns red if the value is bigger than the acceptable aspect error
                          crop values will be used also for the upsize warnings
2245 [Queue] related jobs are highlighted when selecting a job
2244 [Queue] when deleting a job warn always if it is part of a related job series
2243 [AVS Script Creator] fixed a crash if "Clever (TM) anamorphic encoding" is enabled
2242 [AVS Script Creator] show signed "Aspect Ratio Error"
2241 [Worker] a finished temporary worker will not start anymore idle workers. Bug #691
              several small optimizations
2240 [AVS Script Creator] "Aspect Ratio Error" will also be changed if cropping is changed
2239 [AVS Script Creator] added "Aspect Ratio Error"
2238 [AVS Script Creator] enabled upsizing

Changelog 2153 --> 2237

Features/Changes:
- enhanced OneClick tool (read details in the block below)
- AviSynth is not required to be installed anymore. Instead a portable version will be used when required.
- The audio encoder QAAC and OPUS have been added - FAAC has been removed.
  Because of the external dependencies QAAC must be enabled in the MeGUI settings. 
  Additionally for QAAC some files must be installed (https://sites.google.com/site/qaacpage)
- added better MP4 language support & several Apple devices tunings especially for chapters

Enhanced OneClick encoder:
- Blu-ray processing (Folder + Playlist)
- DVD folder + file processing (including PGC support). Feature request #2817190
- folder as input supported. Feature request #3429875/#2773587
- support multiple input files per drag & drop
- new subtitle control (including delay, language, name, forced/default flag). Feature request #2752988